# ReSonoLabs_Syntax

./: .gitignore  APPLICATION_LAYER_PORTING_GUIDE.md  BUILD_AND_FLASH.md  CMakeLists.txt  README.md  SETUP_GUIDE.md  partitions.csv  sdkconfig.defaults
app/: CMakeLists.txt  app.c  board_registry.c
app/include/: app.h  board_registry.h
boards/s3_1_85c_support/: CMakeLists.txt  s3_1_85c_support.c
core/presentation/: CMakeLists.txt  presentation.c
core/runtime_control/: CMakeLists.txt  runtime_control.c
core/state/: CMakeLists.txt  state.c
main/: CMakeLists.txt  app_main.c  idf_component.yml
platform/audio/: CMakeLists.txt  audio_platform.c
platform/display/: CMakeLists.txt  display_platform.c
platform/input/: CMakeLists.txt  input_platform.c
platform/network/: CMakeLists.txt  network_platform.c
platform/power/: CMakeLists.txt  power_platform.c
platform/storage/: CMakeLists.txt  storage_platform.c
platform/web_server/: CMakeLists.txt  web_server_platform.c
services/orb/: CMakeLists.txt  orb_service.c
services/ota/: CMakeLists.txt  ota_service.c
services/security/: CMakeLists.txt  security_auth.c
services/settings/: CMakeLists.txt  settings_service.c
services/wifi_provisioning/: CMakeLists.txt  wifi_provisioning.c
services/wifi_setup/: CMakeLists.txt  (+1 more)
ui/widgets/: CMakeLists.txt  anim_registry.c  animations_aurora.c  animations_compass.c  animations_helix.c  animations_lattice.c  animations_lissajous.c  animations_nucleus.c  animations_radar.c  animations_vortex.c  orb_widget.c
ui/widgets/include/: anim_registry.h  orb_widget.h
(+62 files in other folders)
